# SoccerMaster

./: .env  .gitignore  AGENTS.md  README.md  minimap.py  pitch_distances.py  reference_football.csv  soccermaster_task15_handoff.md
codes/sn-gamestate/: pyproject.toml
codes/sn-gamestate/plugins/calibration/: pyproject.toml
codes/sn-gamestate/sn_gamestate/calibration/: nbjw_calib.py
codes/sn-gamestate/sn_gamestate/concat_tracklets_by_reid/: concat_tracklets_by_reid_api.py
codes/sn-gamestate/sn_gamestate/configs/: gsr_step_1_example.yaml  gsr_step_3_example.yaml  gsr_step_3_example_accelerate.yaml
codes/sn-gamestate/sn_gamestate/configs/visualization/: gamestate.yaml
codes/sn-gamestate/sn_gamestate/detect_multiple/: yolov8_person_api.py
codes/sn-gamestate/sn_gamestate/jersey/: mmocr_api.py
codes/sn-gamestate/sn_gamestate/jersey_and_role/: qwen2_5vl_jn_and_role_api.py
codes/sn-gamestate/sn_gamestate/legibility/: legibility_api.py
codes/sn-gamestate/sn_gamestate/reid/: embedding_utils.py  prtreid_api.py  prtreid_dataset.py
codes/sn-gamestate/sn_gamestate/role/: qwen2_5vl_role_api.py
codes/sn-gamestate/sn_gamestate/sn_gamestate/concat_tracklets_by_jn/: concat_tracklets_by_jn_api.py
codes/sn-gamestate/sn_gamestate/sn_gamestate/concat_tracklets_by_reid/: concat_tracklets_by_reid_api.py
codes/sn-gamestate/sn_gamestate/sn_gamestate/configs/: gsr_step_1_example.yaml  gsr_step_1_train_061.yaml  (+4 more)
codes/sn-gamestate/sn_gamestate/team/: tracklet_team_clustering_api.py
codes/sn-gamestate/sn_gamestate/visualization/: pitch.py  pitch_visualization.py
(+252 files in other folders)
